# skellyalign

./: MDN_validation_marker_set.py  README.md  RMSE_GUI.py  alignment_test.py  app.py  calculate_and_assess_data.py  calculate_and_assess_data_v2.py  config.py  error_metrics_builder.py  load_rmse_from_csv.py  main.py  marker_extraction.py  pyproject.toml  requirements.txt  rmse_plots.py  sample_recording_config.py  visualize_data.py
data_utils/: combine_dataframes.py  dataframe_builder.py  load_and_process_data.py
error_calculations/: error_metrics_builder.py
freemocap_utils/GUI_widgets/rmse_widgets/: RMSE_calculator.py
marker_lists/: qualisys_markers.py
old/: calculate_and_assess_data_v2.py  dataframes.py  main.py  plotly_test.py
old/error_calculations/: get_error_metrics.py
skellyalign/: __main__.py  align_things.py  run_alignment.py
skellyalign/models/: alignment_config.py  recording_config.py  recording_config_from_file_paths copy.py
skellyalign/plots/: scatter_3d.py
skellyalign/spatial_alignment/: align_things.py
skellyalign/spatial_alignment/models/: qualisys_full_body.yaml
skellyalign/temporal_alignment/: config.py  create_temporal_sync_config.py  freemocap_data_processing.py  motion_data_repository.py  qualisys_data_processing.py  run_temporal_synchronization.py  temp_sync_visualizer.py  temporal_synchronizer.py
skellyalign/temporal_alignment/configs/: pre_configured_components.py  recording_config.py  temporal_alignment_config.py
skellyalign/temporal_alignment/data/: qualisys.py
skellyalign/utilities/: data_handlers.py
(+9 files in other folders)
