[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "skellyalign"
description = "Basic template of a python repository"
readme = "README.md"
authors = [{ name = "Aaron Cherian", email = "aaron@freemocap.org" }]
license = { file = "LICENSE" }

classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

keywords = [
    "basic",
    "template",
    "python",
    "repository"
]

dependencies = [
    "matplotlib==3.8.*",
    "numpy==1.26.*",
    "pandas==2.2.*",
    "pydantic==2.7.*",
    "scipy==1.13.*"
]

requires-python = ">=3.9,<3.12"

